apply 26.2 (by opus5)